// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trae - middleware after runs the fulfill after middlewares 1`] = `
Object {
  "config": Object {
    "headers": Object {},
    "method": "GET",
    "url": "http://localhost:8080/api/foo",
  },
  "data": Object {
    "foo": "bar",
    "test": true,
  },
  "headers": Headers {
    Symbol(map): Object {
      "Content-Length": Array [
        "13",
      ],
      "Content-Type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;

exports[`trae - middleware after runs the reject after middlewares 1`] = `[Error: Internal Server Error]`;

exports[`trae - middleware before runs the before middlewares 1`] = `
Object {
  "config": Object {
    "headers": Object {
      "Authorization": "12345Foo",
    },
    "method": "GET",
    "url": "http://localhost:8080/api/foo",
  },
  "data": Object {
    "foo": "bar",
  },
  "headers": Headers {
    Symbol(map): Object {
      "Content-Length": Array [
        "13",
      ],
      "Content-Type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;

exports[`trae - middleware finally runs the finally middlewares 1`] = `
Object {
  "config": Object {
    "headers": Object {},
    "method": "GET",
    "mySpecialConfig": "unicorn",
    "url": "http://localhost:8080/api/foo",
  },
  "data": Object {
    "foo": "bar",
  },
  "headers": Headers {
    Symbol(map): Object {
      "Content-Length": Array [
        "13",
      ],
      "Content-Type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;
